Slight .gitignore change.
This one allows me to use the tool in the base directory - faster for updating the games.

Signed-off-by: mantazzo <mantas.jokubauskas@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 *.bmp
 steam_retriever/bin
 steam_retriever/obj
+*.dll
+steam_retriever.deps.json
+steam_retriever.exe
+steam_retriever.linux
+steam_retriever.macos
+steam_retriever.pdb
+steam_retriever.runtimeconfig.json
