--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,22 +44,33 @@ jobs:
           mv bin/Release/netcoreapp3.1/osx-x64/publish/steam_retriever bin/Release/netcoreapp3.1/publish/steam_retriever.macos
           mv bin/Release/netcoreapp3.1/win-x64/publish/steam_retriever.exe bin/Release/netcoreapp3.1/publish/steam_retriever.exe
           mv bin/Release/netcoreapp3.1/publish ../release/steam_retriever
+          cd ..
+          cd epic_retriever
+          dotnet publish -c Release
+          dotnet publish -c Release -r osx-x64 --self-contained=false
+          dotnet publish -c Release -r win-x64 --self-contained=false
+          mkdir ../release/
+          mv bin/Release/netcoreapp3.1/publish/epic_retriever bin/Release/netcoreapp3.1/publish/epic_retriever.linux
+          mv bin/Release/netcoreapp3.1/osx-x64/publish/epic_retriever bin/Release/netcoreapp3.1/publish/epic_retriever.macos
+          mv bin/Release/netcoreapp3.1/win-x64/publish/epic_retriever.exe bin/Release/netcoreapp3.1/publish/epic_retriever.exe
+          mv bin/Release/netcoreapp3.1/publish ../release/epic_retriever
           exit 0
           
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: steam_retriever
+          name: retrievers
           path: |
             release/steam_retriever
+            release/epic_retriever
             
       - name: Packaging
         run: |
           cd release
-          tar czf steam_retriever.tgz steam_retriever
+          tar czf retrievers.tgz steam_retriever epic_retriever
           
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: release/steam_retriever.tgz
+          files: release/retrievers.tgz
