--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,25 +35,18 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Build project
         run: |
-          cd steam_retriever
-          dotnet publish -c Release
-          dotnet publish -c Release -r osx-x64 --self-contained=false
-          dotnet publish -c Release -r win-x64 --self-contained=false
-          mkdir ../release/
-          mv bin/Release/netcoreapp3.1/publish/steam_retriever bin/Release/netcoreapp3.1/publish/steam_retriever.linux
-          mv bin/Release/netcoreapp3.1/osx-x64/publish/steam_retriever bin/Release/netcoreapp3.1/publish/steam_retriever.macos
-          mv bin/Release/netcoreapp3.1/win-x64/publish/steam_retriever.exe bin/Release/netcoreapp3.1/publish/steam_retriever.exe
-          mv bin/Release/netcoreapp3.1/publish ../release/steam_retriever
-          cd ..
-          cd epic_retriever
-          dotnet publish -c Release
-          dotnet publish -c Release -r osx-x64 --self-contained=false
-          dotnet publish -c Release -r win-x64 --self-contained=false
-          mkdir ../release/
-          mv bin/Release/netcoreapp3.1/publish/epic_retriever bin/Release/netcoreapp3.1/publish/epic_retriever.linux
-          mv bin/Release/netcoreapp3.1/osx-x64/publish/epic_retriever bin/Release/netcoreapp3.1/publish/epic_retriever.macos
-          mv bin/Release/netcoreapp3.1/win-x64/publish/epic_retriever.exe bin/Release/netcoreapp3.1/publish/epic_retriever.exe
-          mv bin/Release/netcoreapp3.1/publish ../release/epic_retriever
+          mkdir release/
+          for i in steam epic; do
+            cd "${i}_retriever"
+            dotnet publish -c Release
+            dotnet publish -c Release -r osx-x64 --self-contained=false
+            dotnet publish -c Release -r win-x64 --self-contained=false
+            mv "bin/Release/netcoreapp3.1/publish/${i}_retriever"             "bin/Release/netcoreapp3.1/publish/${i}_retriever.linux"
+            mv "bin/Release/netcoreapp3.1/osx-x64/publish/${i}_retriever"     "bin/Release/netcoreapp3.1/publish/${i}_retriever.macos"
+            mv "bin/Release/netcoreapp3.1/win-x64/publish/${i}_retriever.exe" "bin/Release/netcoreapp3.1/publish/${i}_retriever.exe"
+            mv "bin/Release/netcoreapp3.1/publish" "../release/${i}_retriever"
+            cd ..
+          done
           exit 0
           
       - name: Archive production artifacts
